<resources>
    <string name="app_name">ECommerce</string>
    <string name="english">English</string>
    <string name="arabic" translatable="false">Arabic</string>
    <string name="allow_permission_for_storage_access">Allow permission for storage access!</string>
    <string name="tv_change_lang_header">Change Language</string>
    <string name="no_internet_connection">" No internet connection "</string>
    <string name="empty_error">You should inter the field</string>
    <string name="empty_email_error">You should inter an Email</string>
    <string name="empty_name_error">You should inter User Name</string>
    <string name="empty_phone_error">You should inter User Phone</string>
    <string name="empty_new_phone_error">You should inter the new-password</string>
    <string name="empty_confirm_phone_error">You should inter the confrim-password same to the new password</string>
    <string name="not_agree_terms_error">You should agree The terms and conditions</string>
    <string name="not_email_error">This is not an email address</string>
    <string name="empty_password_error">You Should Inter Your Password</string>
    <string name="small_password_error">Small Password not allowed</string>
    <string name="server_error">Server Error</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="couldnt_reach_server">Couldn\'t reach the server!</string>
    <string name="no_data_found">No Data Found</string>
    <string name="database_error">There is a problem in database.</string>
    <string name="p_trmnl_required">P_TRMNL is required.</string>
    <string name="machine_not_verified">Machine not verified</string>
    <string name="no_users_found">No Users Found</string>
    <string name="no_branches_for_the_users">There are no branches for the users.</string>
    <string name="machine_no_required">P_MACHINE_NO is required</string>
    <string name="pos_does_not_exist">POS does not exist !</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ultimate_store">Ultimate Store</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="login_register">دخول / اشتراك</string>
    <string name="orders">الطلبات</string>
    <string name="addresses">العناوين</string>
    <string name="favorate">المفضلات</string>
    <string name="lang_cur">اللغة والعملة</string>
    <string name="lang">اللغة</string>
    <string name="cur">العملة</string>
    <string name="help">المساعدة</string>
    <string name="about">عن المتجر</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="searchMsg">.ابحث عن منتج محدد</string>
    <string name="agree">موافق</string>
    <string name="home_title">!عروض لا تفوتك</string>
    <string name="category">الأقسام</string>
    <string name="register_now_msg">اشترك بحساب جديد معنا</string>
    <string name="login">دخول</string>
    <string name="loading">Loading</string>
    <string name="login_title">سجل الدخول</string>
    <string name="login_filed">فشل التسجيل</string>
    <string name="login_success">تم تسجيل الدخول بنجاح</string>
    <string name="login_msg">طلبك في الإنتظار! فقط قم بتسجيل الدخول لحسابك أو قم بالإشتراك معنا إن لم تكن تملك حساب</string>
    <string name="or_enter_user">أو أدخل بياناتك يدوياً</string>
    <string name="user_name">الاسم</string>
    <string name="user_phone">رقم الجوال</string>
    <string name="user_email">البريد الإلكتروني</string>
    <string name="optional">إختياري</string>
    <string name="register">اشتراك</string>
    <string name="register_new">اشتراك جديد</string>
    <string name="user_password">كلمة المرور</string>
    <string name="register_with_us">اشترك معنا</string>
    <string name="continue_as_vistor">استكمال الطلب كزائر</string>
    <string name="forget_password">إستعادة كلمة المرور</string>
    <string name="address_city">المدينة</string>
    <string name="address_area">المدينة</string>
    <string name="address_street">الشارع ورقم المنزل</string>
    <string name="address_landmark">علامات مميزة</string>
    <string name="current_password">كلمة المرور الحالية</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="user_social_media">حسابات التواصل الإجتماعي</string>
    <string name="user_profile">الملف الشخصي</string>
    <string name="user_profile_msg">بياناتك الشخصية مع المتجر</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="bind">ربط</string>
    <string name="favorite">المفضلات</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="arabic_language">اللغة العربية</string>
    <string name="english_language">English</string>
    <string name="saudi_cur">ريال سعودي</string>
    <string name="uae_cur">درهم إماراتي</string>
    <string name="kuwait_cur">دينار كويتي</string>
    <string name="bahrain_cur">دينار بحريني</string>
    <string name="egypt_cur">جنيه مصري</string>
    <string name="edit_address">تعديل العنوان</string>
    <string name="confirm_order">تأكيد الطلب</string>
    <string name="address">العنوان</string>
    <string name="shipping">الشحن</string>
    <string name="checkout">مراجعة</string>
    <string name="payment">الدفع</string>
    <string name="dots">▬ ▬ ▬ ▬ ▬ ▬</string>
    <string name="dots2">▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ ▬ </string>
    <string name="empty_filed">الحقل فارغ</string>
    <string name="small_password">يجب ان يكون طول كلمة السر اكثر من اريعة رموز</string>
    <string name="discountBy">خصم</string>
    <string name="order">الترتيب</string>
    <string name="color">اللون</string>
    <string name="price">السعر</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="start_error">Unable to start</string>
    <string name="start_error_msg">There is data can\'t not updated from server, please try again later</string>
    <string name="sample_small">Sample</string>
    <string name="sample_number">0</string>
    <string name="sample_money">100 EGP</string>
    <string name="sample_mideum">The iPhone 12 and iPhone 12 mini are smartphones by Apple Inc. They were presented in a livestream keynote on October 13, 2020. It can be pre-ordered from October 18, 2020. In the run-up most of the features were predicted by many leakers. For the first time, the devices will be delivered without EarPods or charger.</string>
    <string name="pay_product">اشترى المنتج</string>
    <string name="detail">المواصفات</string>
    <string name="ratings">التقييمات</string>
    <string name="see_all">عرض الكل</string>
    <string name="similar_product">منتجات مماثلة</string>
    <string name="your_comment">تعليقك</string>
    <string name="rate_dialog_msg">أنت لم تقم بشراء المنتج عبر متجرنا، سيظهر تقييمك للمستخدمين لكن لن يتم احتسابه في تقييم المنتج</string>
    <string name="rate_product">تقييم المنتج</string>
    <string-array name="order_title">
        <item>جديدة</item>
        <item>مؤكدة</item>
        <item>شحنت</item>
        <item>وصلت</item>
    </string-array>
    <string name="other_product">منتجات أخرى</string>
    <string name="no_new_order_msg">لا توجد طلبات جديدة في الوقت الحالي</string>
    <string name="no_approved_order_msg">لا توجد طلبات مؤكدة في الوقت الحالي</string>
    <string name="no_charged_order_msg">لا توجد طلبات مشحونة في الوقت الحالي</string>
    <string name="no_complated_order_msg">لا توجد طلبات مكتملة في الوقت الحالي</string>
    <string name="get_data_msg">جاري جلب البيانات</string>
    <string name="tax_plus">ضريبة القيمة المضافة</string>
    <string name="ship_price">تكلفة الشحن</string>
    <string name="discount">المبلغ المخصوم</string>
    <string name="total">الإجمالي</string>
    <string name="free_ship">شحن مجاني</string>
    <string name="products_title">المنتجات</string>
    <string name="address_title">العنوان</string>
    <string name="ship_title">الشحن</string>
    <string name="deliver_title">الدفع</string>
    <string name="cost_title">التكلفة</string>
    <string name="order_done">تم توصيل الطلب</string>
    <string name="sample_date">2022/06/30</string>
    <string name="order_confirm_msg">تم تأكيد توصيل الطلب لكم في يوم</string>
    <string name="order_cancel_title">إلغاء الطلب</string>
    <string name="rate_products">تقييم المنتجات</string>
    <string name="paymentTitle">عند الإستلام</string>
    <string name="payment_msg">ادفع نقداً عند استلامك الطلب</string>
    <string name="next_rate">التالي</string>
    <string name="save_rate">حفظ التقييمات</string>
    <string name="aramex">Aramex</string>
    <string name="dhl">DHL</string>
    <string name="free_ship_msg">يتم الشحن عبر طرق الشحن التقليدية</string>
    <string name="aramex_msg">الشحن عبر خدمة أرامكس</string>
    <string name="dhl_msg">الشحن عبر خدمة دي اتش ال</string>
    <string name="in_dalivered">عند الإستلام</string>
    <string name="cash_msg">ادفع نقداً عند استلامك الطلب</string>
    <string name="e_payment">دفع الكتروني</string>
    <string name="e_payment_msg">ادفع عبر احدى بوابات الدفع الإلكتروني التالية</string>
    <string name="cridet_cart">بطاقة إئتمانية</string>
    <string name="cridet_cart_msg">لم تقم بإضافة بطاقة إئتمانية</string>
    <string name="add">إضافة</string>
    <string name="main">الرئيسية</string>
    <string name="order_done_msg">تم وضع الطلب</string>
    <string name="order_add_done_msg">تم وضع الطلب بنجاح! جاري المراجعة وسيتم اخطارك فور شحن الطلب</string>
    <string name="edit">تعديل</string>
    <string name="cart">سلة المشتريات</string>
    <string name="pay">شراء</string>
    <string name="product_note">ملاحظات عن المنتج</string>
    <string name="update_cart">تحديث سلة المشتريات</string>
    <string name="update">تحديث</string>
    <string name="clear_cart">تصفية سلة المشتريات</string>
    <string name="clear_cart_msg">هل انت متأكد من حذف جميع المنتجات من سلة المشتريات؟</string>
    <string name="coupon_code">Coupon code</string>
    <string name="profile_edit">تعديل البيانات</string>
    <string name="wron_password_error">كلمة السر خاطئة</string>
    <string name="new_and_confrim_password_no_same">يجب أن تدخل رمز التحقق مشابه لرمز الدخول الجديد</string>
    <string name="save_data">حفظ البيانات</string>
    <string name="empty_cart">سلة المشتريات فارغة، قم بإضافة أصناف داخلها اولا..</string>
    <string name="logout_msg">هل انت متأكد من تسجيل الخروج من هذا الحساب؟</string>
    <string name="favorite_delete_from">حذف من المفضلة</string>
    <string name="favorite_delete_from_msg">هل تريد حذف هذا الصنف من المفضلة؟</string>
    <string name="search_empty_error">قم بإدخال نص ما للبحث عنه!</string>
    <string name="search">بحث</string>
    <string name="password_not_structure_well">هناك صعوبة في ايجاد الحقل المناسب لكلمة السر، يرجى التواصل مع المسؤول على التطبيق</string>
    <string name="field_not_structure_well">هناك صعوبة في ايجاد الحقل المناسب، يرجى التواصل مع المسؤول على التطبيق</string>
    <string name="error">خطاء</string>
    <string name="login_first">يجب تسجيل الدخول اولا لإتمام العملية</string>
    <string name="update_password_succss" >تم تغيير كلمة السر بنجاح</string>
    <string name="filter">فلترة الاصناف</string>
</resources>