<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.ultimate.ecommerce.app.DynamicTheme" />

        <variable
            name="color"
            type="DynamicTheme" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sample_number"
            android:textColor="@color/dark_gray"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView40"
            app:layout_constraintStart_toEndOf="@+id/textView40"
            app:layout_constraintTop_toTopOf="@+id/textView40"
            app:srcCompat="@drawable/ic_rateing_star" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="56dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:text="@string/dots"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dots2"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/payProductTV"
            app:layout_constraintStart_toStartOf="@+id/textView41"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <TextView
            android:id="@+id/payProductTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_product"
            android:visibility="gone"
            android:textColor="@{color.gradientStartColor}"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider9"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>