<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ultimate.ecommerce.app.DynamicTheme" />

        <variable
            name="color"
            type="DynamicTheme" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@{color.gradientEndColor}"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/couponED"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/back_round_10"
                android:drawableStart="@drawable/ic_discount"
                android:drawablePadding="10dp"
                android:hint="@string/coupon_code"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/totalBeforeDiscountTV"
                app:layout_constraintStart_toStartOf="@+id/couponED"
                app:layout_constraintTop_toTopOf="@+id/totalAfterDiscountTV" />

            <TextView
                android:id="@+id/totalAfterDiscountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/sample_money"
                android:textColor="@{color.gradientStartColor}"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/discountTV"
                app:layout_constraintTop_toBottomOf="@+id/discountTV" />

            <TextView
                android:id="@+id/totalBeforeDiscountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/sample_money"
                android:visibility="gone"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/totalAfterDiscountTV"
                app:layout_constraintEnd_toStartOf="@+id/totalAfterDiscountTV"
                app:layout_constraintTop_toTopOf="@+id/totalAfterDiscountTV" />

            <TextView
                android:id="@+id/discountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:text="@string/sample_money"
                android:textColor="@{color.gradientStartColor}"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/couponED"
                app:layout_constraintTop_toBottomOf="@+id/couponED" />

            <TextView
                android:id="@+id/discountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/couponED"
                app:layout_constraintTop_toTopOf="@+id/discountTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>