<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ultimate.ecommerce.app.DynamicTheme" />

        <variable
            name="color"
            type="DynamicTheme" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:buttonTint="@{color.gradientStartColor}"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/textView35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <RadioButton
            android:id="@+id/radioButton54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@{color.gradientStartColor}"
            app:layout_constraintStart_toStartOf="@+id/radioButton2"
            app:layout_constraintTop_toTopOf="@+id/textView39" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/in_dalivered"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/radioButton2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cash_msg"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/e_payment"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/radioButton54"
            app:layout_constraintTop_toBottomOf="@+id/divider1e" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/e_payment_msg"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/textView39"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cridet_cart_msg"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/textView46"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cridet_cart"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/radioButton3"
            app:layout_constraintTop_toBottomOf="@+id/divider1we" />

        <TextView
            android:id="@+id/addLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@{color.gradientStartColor}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView45"
            app:layout_constraintEnd_toEndOf="@+id/divider10" />


        <View
            android:id="@+id/divider10"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/divider1we"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView45"
            app:layout_constraintTop_toBottomOf="@+id/radioButton3" />


        <View
            android:id="@+id/divider1we"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/divider1e"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView43"
            app:layout_constraintTop_toBottomOf="@+id/ePaymentServiceRV" />

        <View
            android:id="@+id/divider1e"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView35"
            app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@{color.gradientStartColor}"
            app:layout_constraintBottom_toBottomOf="@+id/textView45"
            app:layout_constraintStart_toStartOf="@+id/radioButton54"
            app:layout_constraintTop_toTopOf="@+id/textView46" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <include
            android:id="@+id/payBtn"
            layout="@layout/view_custom_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline22"
            app:layout_constraintStart_toStartOf="@+id/guideline23" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ePaymentServiceRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/divider1we"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/textView43"
            app:layout_constraintTop_toBottomOf="@+id/textView43"
            tools:listitem="@layout/view_electric_payment" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>